Add portfolio page and fix link colors.

--- a/src/assets/css/firebrand/theme-typography.scss
+++ b/src/assets/css/firebrand/theme-typography.scss
@@ -15,6 +15,7 @@ p {
   height:auto;
 }
 
+.g-pstyle0 a,
 .g-pstyle0 {
   font-weight:700;
   font-size:21px;
@@ -22,19 +23,23 @@ p {
   text-align:center;
   color:rgb(255,255,255);
 }
+.g-pstyle1 a,
 .g-pstyle1 {
   font-size:17px;
   line-height:21px;
 }
+.g-pstyle2 a,
 .g-pstyle2 {
   font-weight:700;
   font-size:40px;
   line-height:48px;
 }
+.g-pstyle3 a,
 .g-pstyle3 {
   font-weight:700;
   color:rgb(224,56,43);
 }
+.g-pstyle4 a,
 .g-pstyle4 {
   font-weight:700;
   font-size:27px;
@@ -42,54 +47,65 @@ p {
   padding-bottom:3px;
   color:rgb(255,255,255);
 }
+.g-pstyle5 a,
 .g-pstyle5 {
   font-size:21px;
   line-height:25px;
   padding-bottom:3px;
   color:rgb(255,255,255);
 }
+.g-pstyle6 a,
 .g-pstyle6 {
   font-weight:700;
   font-size:24px;
   line-height:29px;
   color:rgb(255,255,255);
 }
+.g-pstyle7 a,
 .g-pstyle7 {
   color:rgb(255,255,255);
 }
+.g-pstyle8 a,
 .g-pstyle8 {
   font-weight:700;
   font-size:27px;
   line-height:33px;
 }
+.g-pstyle9 a,
 .g-pstyle9 {
   font-weight:700;
   font-size:27px;
   line-height:33px;
 }
+.g-pstyle10 a,
 .g-pstyle10 {
   text-align:center;
 }
+.g-pstyle11 a,
 .g-pstyle11 {
   color:rgb(224,56,43);
 }
+.g-pstyle12 a,
 .g-pstyle12 {
   font-weight:700;
   font-size:46px;
   line-height:55px;
 }
+.g-pstyle13 a,
 .g-pstyle13 {
   font-weight:700;
   font-size:27px;
   line-height:33px;
   color:rgb(255,255,255);
 }
+.g-pstyle14 a,
 .g-pstyle14 {
   font-size:17px;
   line-height:21px;
   text-align:right;
   color:rgb(255,255,255);
 }
+.g-pstyle15 a,
 .g-pstyle15 {
   font-size:17px;
   line-height:21px;
