First crack at scss structure.

--- a/src/assets/css/firebrand/theme.scss
+++ b/src/assets/css/firebrand/theme.scss
@@ -126,7 +126,7 @@ a.action-button:hover {
   padding-right: 2rem !important;
 }
 
-/* TODO: Figure out how to toggle these menu dropdowns (hint check out amp-start components) */
+/* TODO: Figure out how to toggle these menu dropdowns (hint check out amp-start ampstart) */
 .ampstart-dropdown-items {
   display: none;
 }
