--- a/src/assets/css/firebrand/theme.scss
+++ b/src/assets/css/firebrand/theme.scss
@@ -2,6 +2,12 @@ body {
   font-family: sans-serif;;
 }
 
+#menu {
+  flex: 1 1 100%;
+  justify-content: space-around;
+  max-width: 40%;
+}
+
 .logo {
   margin-left: 1rem;
 }
