Adjust vertical menu spacing.

--- a/src/assets/css/firebrand/theme.scss
+++ b/src/assets/css/firebrand/theme.scss
@@ -6,6 +6,8 @@ body {
   flex: 1 1 100%;
   justify-content: space-around;
   max-width: 40%;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 
 .logo {
