--- a/src/assets/css/firebrand/theme.scss
+++ b/src/assets/css/firebrand/theme.scss
@@ -252,3 +252,10 @@ a.action-button:hover {
   background: transparent;
   box-shadow: none;
 }
+
+@media screen and (max-width: 660px) {
+  .banner-image {
+    max-width: 100%;
+    object-fit: contain;
+  }
+}
