Replace dummy testimonial pictures.

--- a/src/assets/css/firebrand/style.scss
+++ b/src/assets/css/firebrand/style.scss
@@ -3,6 +3,7 @@
 @import './flex-utils';
 @import './spacing-utils';
 @import './image-utils';
+@import './text-utils';
 @import './style-colors';
 @import './blocks';
 /* TODO: Import as a separate package */
