--- a/src/assets/css/ampstart/images/fullpage-hero.scss
+++ b/src/assets/css/ampstart/images/fullpage-hero.scss
@@ -58,7 +58,7 @@
   background: var(--color-primary);
 }
 
-@media (--breakpoint-md) {
+@media (var(--breakpoint-md)) {
   .ampstart-image-fullpage-hero > amp-img {
     height: 60vh;
   }
