--- a/src/assets/css/firebrand/style.scss
+++ b/src/assets/css/firebrand/style.scss
@@ -1,6 +1,7 @@
 /* Base package */
 @import 'basscss';
 @import './flex-utils';
+@import './responsive-utils';
 @import './spacing-utils';
 @import './image-utils';
 @import './text-utils';
