--- a/src/assets/css/firebrand/theme.scss
+++ b/src/assets/css/firebrand/theme.scss
@@ -104,8 +104,8 @@ footer a:hover {
 .figure-caption {
   position: absolute;
   bottom: 0;
-  width: 35rem; /* TODO: Responsive plz! */
   padding: 1rem 2rem;
+  width: 35rem;
 }
 
 .figure-caption-full {
