--- a/src/assets/css/firebrand/responsive.scss
+++ b/src/assets/css/firebrand/responsive.scss
@@ -18,8 +18,8 @@
     .figure-caption {
         position: absolute;
         bottom: 6px;
-        width: 35rem;
-        padding: 1rem 2rem;
+        max-width: 100%;
+        padding: 1rem 1rem;
         text-align: center;
     }
 
