--- a/src/assets/css/firebrand/theme.scss
+++ b/src/assets/css/firebrand/theme.scss
@@ -80,6 +80,12 @@ footer a:hover {
   max-width: 50vw;
 }
 
+@media screen and (max-width: 40em) {
+  .hero-image-wrapper {
+    max-width: 100vw;
+  }
+}
+
 @media screen and (min-width: 1400px) {
   .home-page-banner-image {
     position: relative;
