--- a/src/assets/css/firebrand/theme.scss
+++ b/src/assets/css/firebrand/theme.scss
@@ -80,6 +80,15 @@ footer a:hover {
   max-width: 50vw;
 }
 
+/* TODO: Don't apply these set widths everywhere... target testimonials only? */
+img.circle {
+  width: 250px;
+  height: 250px;
+  -o-object-fit: cover;
+  max-width: none;
+  object-fit: cover;
+}
+
 @media screen and (max-width: 40em) {
   .hero-image-wrapper {
     max-width: 100vw;
