Update branding to reflect company name change to 'Blue Collar'.

--- a/src/assets/css/firebrand/theme-typography.scss
+++ b/src/assets/css/firebrand/theme-typography.scss
@@ -4,7 +4,7 @@ a {
 
 a:hover,
 a:active {
-  color: #e0382b;
+  color: #5c7e9e;
 }
 
 p {
@@ -46,7 +46,7 @@ p {
 .g-pstyle3 a,
 .g-pstyle3 {
   font-weight:700;
-  color:rgb(224,56,43);
+  color:rgb(92, 126, 158);
 }
 .g-pstyle4 a,
 .g-pstyle4 {
@@ -92,7 +92,7 @@ p {
 }
 .g-pstyle11 a,
 .g-pstyle11 {
-  color:rgb(224,56,43);
+  color:rgb(92, 126, 158);
 }
 .g-pstyle12 a,
 .g-pstyle12 {
