--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -1,6 +1,6 @@
 /* Load vars first! */
 @import './vars';
-@import './firebrand/style';
+@import './bluecollar/style';
 
 /* Load ampstart components after vars */
 @import './ampstart/inputs/inputs';
