--- a/src/assets/css/firebrand/style-colors.scss
+++ b/src/assets/css/firebrand/style-colors.scss
@@ -7,12 +7,12 @@
   color: #720500; /* rgb(114, 5, 0) */
 }
 
-.firebrand-red {
+.bc-red {
   color: #e0382b;
 }
 
-.firebrand-blue {
-  color: #147AC2;
+.bc-blue {
+  color: #5c7e9e;
 }
 
 /* Background Colors */
@@ -24,23 +24,19 @@
   background-color: #e7655b;
 }
 
-.bg-cherry {
-  background-color: #720500; /* rgb(114, 5, 0) */
-  color: white;
+.bg-bc-blue {
+  background-color: #5c7e9e;
+  color: white; /* TODO: Move this out */
 }
 
-.bg-cherry.transparent {
-  background-color: rgba(114, 5, 0, 0.777);
+.bg-bc-blue.transparent {
+  background-color: rgba(92, 126, 158, 0.777);
   color: white;
 }
 
 /* TODO: Important styles are not AMP compatible! */
-.bg-firebrand-red {
+.bg-bc-red {
   background-color: #e0382b !important;
-}
-
-.bg-firebrand-blue {
-  background-color: #147AC2 !important;
 }
 
 .bg-light-grey {
