--- a/src/assets/css/bluecollar/theme.scss
+++ b/src/assets/css/bluecollar/theme.scss
@@ -15,10 +15,18 @@ body {
   height: 40px;
 }
 
+footer .logo {
+    margin-left: 0;
+  }
+
 @media screen and (max-width: 40rem) {
   .logo {
-    margin-left: 1rem;
     height: 30px;
+  }
+
+  footer .logo {
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 
