--- a/src/assets/css/bluecollar/theme.scss
+++ b/src/assets/css/bluecollar/theme.scss
@@ -424,7 +424,7 @@ section.hero-section {
   }
 
   section.hero-section.angle + section.hero-section {
-    padding-top: 120px;
+    padding-bottom: 120px;
   }
 
   .hero-section:nth-child(even) .hero-image-wrapper img {
