Tried to fix skews need some math of math + js to fix this screw it I don't have time for this right now, just disable the angle effect. Probably easier using SVG mask or something...

--- a/src/assets/css/bluecollar/theme.scss
+++ b/src/assets/css/bluecollar/theme.scss
@@ -1,3 +1,71 @@
+/* Math fx */
+@function pow($number, $exp) {
+  $value: 1;
+  @if $exp > 0 {
+    @for $i from 1 through $exp {
+      $value: $value * $number;
+    }
+  } @else if $exp < 0 {
+    @for $i from 1 through -$exp {
+      $value: $value / $number;
+    }
+  }
+  @return $value;
+}
+
+@function fact($number) {
+  $value: 1;
+  @if $number > 0 {
+    @for $i from 1 through $number {
+      $value: $value * $i;
+    }
+  }
+  @return $value;
+}
+
+@function pi() {
+  @return 3.14159265359;
+}
+
+@function rad($angle) {
+  $unit: unit($angle);
+  $unitless: $angle / ($angle * 0 + 1);
+  // If the angle has 'deg' as unit, convert to radians.
+  @if $unit == deg {
+    $unitless: $unitless / 180 * pi();
+  }
+  @return $unitless;
+}
+
+@function sin($angle) {
+  $sin: 0;
+  $angle: rad($angle);
+  // Iterate a bunch of times.
+  @for $i from 0 through 10 {
+    $sin: $sin + pow(-1, $i) * pow($angle, (2 * $i + 1)) / fact(2 * $i + 1);
+  }
+  @return $sin;
+}
+
+@function cos($angle) {
+  $cos: 0;
+  $angle: rad($angle);
+  // Iterate a bunch of times.
+  @for $i from 0 through 10 {
+    $cos: $cos + pow(-1, $i) * pow($angle, 2 * $i) / fact(2 * $i);
+  }
+  @return $cos;
+}
+
+@function tan($angle) {
+  @return sin($angle) / cos($angle);
+}
+
+@function get-vw($target) {
+  $vw-context: (1000*.01) * 1px;
+  @return ($target/$vw-context) * 1vw;
+}
+
 body {
   font-family: sans-serif;
   overflow-x: hidden;
@@ -363,21 +431,25 @@ section.hero-section-01-col .hero-block {
   /*top: 6rem;*/
 }
 
+section.hero-section {
+  position: relative;
+  flex-wrap: wrap;
+}
+
 @media screen and (min-width: 1400px) {
   section.hero-section-01-col + section.hero-section:after,
   section.hero-section-01-col + section.hero-section-01-col:after {
     background: inherit;
-    /*top: 0;*/
-    top: -5px;
+    /*top: tan(-3.5deg * 2) + vh;*/
     content: '';
     display: block;
-    height: 120px;
+    height: 10%;
     left: 0;
     right: 0;
     position: absolute;
-    -webkit-transform: skewY(3.5deg);
-    transform: skewY(3.5deg);
-    -webkit-transform-origin: 100%;
+    //-webkit-transform: skewY(3.5deg);
+    //transform: skewY(3.5deg);
+    //-webkit-transform-origin: 100%;
     transform-origin: 100%;
     z-index: 1;
   }
@@ -385,17 +457,17 @@ section.hero-section-01-col .hero-block {
   section.hero-section-01-col.angle + section.hero-section:before,
   section.hero-section-01-col.angle + section.hero-section-01-col:before {
     background: inherit;
-    top: -120px;
+    top: tan(3.5deg * 2) - 9%;
     content: '';
     display: block;
-    height: 120px;
+    height: 10%;
     left: 0;
     right: 0;
     position: absolute;
-    -webkit-transform: skewY(-3.5deg);
-    transform: skewY(-3.5deg);
-    -webkit-transform-origin: 100%;
-    transform-origin: 100%;
+    //-webkit-transform: skewY(-3.5deg);
+    //transform: skewY(-3.5deg);
+    //-webkit-transform-origin: 100%;
+    //transform-origin: 100%;
     z-index: 2;
   }
 
@@ -423,26 +495,20 @@ section.hero-section-01-col .hero-block {
     -o-object-fit: contain;
     object-fit: contain;
   }
-}
 
-section.hero-section {
-  position: relative;
-  flex-wrap: wrap;
-}
-
-@media screen and (min-width: 1400px) {
   section.hero-section.angle + section.hero-section:after {
     background: inherit;
-    top: -5px;
+    top: 0;
     content: '';
     display: block;
     height: 120px;
     left: 0;
     right: 0;
+    width: 100%;
     position: absolute;
-    -webkit-transform: skewY(3.5deg);
-    transform: skewY(3.5deg);
-    transform-origin: 100%;
+    //-webkit-transform: skewY(3.5deg);
+    //transform: skewY(3.5deg);
+    //transform-origin: 100%;
     z-index: 1;
 
   }
@@ -452,13 +518,14 @@ section.hero-section {
     top: -120px;
     content: '';
     display: block;
-    height: 120px;
+    height: 120px !important;
     left: 0;
     right: 0;
+    width: 100%;
     position: absolute;
-    -webkit-transform: skewY(-3.5deg);
-    transform: skewY(-3.5deg);
-    -webkit-transform-origin: 100%;
+    //-webkit-transform: skewY(-3.5deg);
+    //transform: skewY(-3.5deg);
+    //-webkit-transform-origin: 100%;
     transform-origin: 100%;
     z-index: 2;
   }
