--- a/src/assets/css/bluecollar/theme.scss
+++ b/src/assets/css/bluecollar/theme.scss
@@ -268,6 +268,16 @@ img.circle {
   text-decoration: none;
 }
 
+.action-link.transparent,
+.action-button.transparent {
+  display: inline-block;
+  background: transparent;
+  padding: 1rem 2rem;
+  border: 1px solid white; /* Blue Collar Blue */
+  text-decoration: none;
+  color: white;
+}
+
 a.action-link,
 a.action-link:active,
 a.action-link:visited,
@@ -276,6 +286,17 @@ a.action-button:active,
 a.action-button:visited,
 a.action-button:hover {
   color: #33587a;
+}
+
+a.action-link.transparent,
+a.action-link.transparent:active,
+a.action-link.transparent:visited,
+a.action-link.transparent:hover,
+a.action-button.transparent:active,
+a.action-button.transparent:visited,
+a.action-button.transparent:hover {
+  color: white;
+  text-shadow: 1px 0 5px rgba(0, 0, 0, 0.666) !important;
 }
 
 .more-info-link {
