--- a/src/assets/css/bluecollar/theme.scss
+++ b/src/assets/css/bluecollar/theme.scss
@@ -271,11 +271,12 @@ img.circle {
 .action-link.transparent,
 .action-button.transparent {
   display: inline-block;
-  background: transparent;
+  background: rgba(0,0,0,0.125);
   padding: 1rem 2rem;
   border: 1px solid white; /* Blue Collar Blue */
   text-decoration: none;
   color: white;
+  box-shadow: 1px 0 5px rgba(0, 0, 0, 0.333) !important;
 }
 
 a.action-link,
